# company-api-dashboard

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/controllers/: main_controller.rs
src/main_db_client/: mod.rs
src/main_db_profile/: client.rs
src/main_db_profile/models/: department.rs  employee.rs
src/routers/: index.rs
