[package]
name = "company-api-dashboard"
version = "0.1.0"
edition = "2021"
authors=["Eslam Muhammad <0xCrypt00o@protonmail.com>"]
repository = "https://github.com/Crypt00o/conpany-api-dashboard"


[dependencies]
tokio={version="1.26.0",features=["full"]}
serde = {version="1.0.158",features=["serde_derive"]}
serde_json = "1.0"
dotenv="0.15"
sqlx={version="0.6",features=["sqlite","runtime-tokio-native-tls"]}
tide="0.16.0"
